--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -1,5 +1,9 @@
 <html>
     <head>
         <title>Actueel</title>
+        <link rel="styleseet" href=../styles/actueel.css>
     </head>
+    <body>
+
+    </body>
 </html>
