--- a/HTML/verblijven.html
+++ b/HTML/verblijven.html
@@ -1,5 +1,9 @@
 <html>
     <head>
         <title>Verblijven bezichtigen</title>
+        <link rel="styleseet" href=../styles/verblijven.css>
     </head>
+    <body>
+
+    </body>
 </html>
