--- a/HTML/tickets.html
+++ b/HTML/tickets.html
@@ -1,5 +1,9 @@
 <html>
     <head>
         <title>Tickets</title>
+        <link rel="styleseet" href=../styles/tickets.css>
     </head>
+    <body>
+
+    </body>
 </html>
