index.html update

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,12 +12,12 @@
 <body>
     <div id="logo"></div>
     <div id="menu">
-        <div id="odd"></div>
-        <div id="shop"></div>
-        <div id="tickets"></div>
-        <div id="actueel"></div>
-        <div id="contact"></div>
-        <div id="soliciteren"></div>
+        <div id="odd"><a href="dierentuin.html">Over De Dierentuin</a></div>
+        <div id="shop"><a href="shop.html">Shop</a></div>
+        <div id="tickets"><a href="tickets.html">Tickets</a></div>
+        <div id="actueel"><a href="actueel.html">Actueel</a></div>
+        <div id="contact"><a href="contact.html">Contact</a></div>
+        <div id="soliciteren"><a href="solliciteren.html">Soliciteren</a></div>
     </div>
     <div id="banner"></div>
     <div id="home1">
