--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -4,6 +4,25 @@
         <link rel="styleseet" href=../styles/actueel.css>
     </head>
     <body>
-
+        <div id=actueel_banner>
+            <div id=actueel_logo></div>
+            <div id=actueel_titel>
+                <h1>
+                    Actueel
+                </h1>
+            </div>
+        </div>
+        <div id=artikel1 class=artikel>
+            <div id=artikel_foto1></div>
+            <div id=artikel_titel1></div>
+            <div id=artikel_text1>
+                <p>Dit is een div</p>
+            </div>
+        </div>
+        <div id=artikel2 class=artikel>
+            <div id=artikel_foto2></div>
+            <div id=artikel_titel2></div>
+            <div id=artikel_text2></div>
+        </div>
     </body>
 </html>
