--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Actueel</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="styleseet" href=../styles/actueel.css>
     </head>
     <body>
