--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div id="logo"></div>
+    <div id="logo"><img src="../media/logo.png" alt="Italian Trulli"></div>
     <div id="menu">
         <div id="odd"><a href="dierentuin.html">Over De Dierentuin</a></div>
         <div id="shop"><a href="shop.html">Shop</a></div>
