--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../javascript/script.js"></script>
-    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/index.css">
 
 
 </head>
