--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -24,6 +24,7 @@
             <div id=artikel_foto2></div>
             <div id=artikel_titel2></div>
             <div id=artikel_text2></div>
+            <p>dit is een div</p>
         </div>
     </body>
 </html>
