--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div id="logo"><img src="../media/logo.png" alt="Italian Trulli"></div>
+    <div id="logo"><img src="../media/logo.png" alt="Logo"></div>
     <div id="menu">
         <div id="odd"><a href="dierentuin.html">Over De Dierentuin</a></div>
         <div id="shop"><a href="shop.html">Shop</a></div>
@@ -19,14 +19,14 @@
         <div id="contact"><a href="contact.html">Contact</a></div>
         <div id="soliciteren"><a href="solliciteren.html">Soliciteren</a></div>
     </div>
-    <div id="banner"></div>
+    <div id="banner"><img src="../media/Bejing-zoo-ingang.jpg" alt="Bejing-zoo-ingang"></div>
     <div id="home1">
-        <div></div>
-        <div></div>
+        <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci ut eros ornare volutpat nec vel magna. Donec mattis blandit aliquam. Mauris odio ipsum, eleifend non turpis vel, elementum blandit ligula. In ac finibus leo, quis sagittis diam. Nunc purus leo, sodales at risus at, pharetra pulvinar est. Cras eget sapien accumsan, efficitur massa eu, luctus justo. Vivamus pharetra vehicula vulputate. Praesent pellentesque, sem sed elementum dapibus, ex metus aliquam purus, quis volutpat diam quam eu erat. Nulla id ultrices turpis, eget suscipit orci.</p></div>
+        <div><img src="../media/yorikbalk.jpg" alt=""></div>
     </div>
     <div id="home2">
-        <div></div>
-        <div></div>
+        <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci ut eros ornare volutpat nec vel magna. Donec mattis blandit aliquam. Mauris odio ipsum, eleifend non turpis vel, elementum blandit ligula. In ac finibus leo, quis sagittis diam. Nunc purus leo, sodales at risus at, pharetra pulvinar est. Cras eget sapien accumsan, efficitur massa eu, luctus justo. Vivamus pharetra vehicula vulputate. Praesent pellentesque, sem sed elementum dapibus, ex metus aliquam purus, quis volutpat diam quam eu erat. Nulla id ultrices turpis, eget suscipit orci.</p></div>
+        <div><img src="../media/yorikbalk.jpg" alt=""></div>
     </div>
 </body>
 </html>
