--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,10 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../javascript/script.js"></script>
+    <script src="../javascript/index.js"></script>
     <link rel="stylesheet" href="../styles/index.css">
-
-
 </head>
 <body>
     <div id="logo"><img src="../media/logo.png" alt="Logo"></div>
