--- a/HTML/cafeteria.html
+++ b/HTML/cafeteria.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="../styles/cafeteria.css">
 </head>
 <body>
-
+    <div id="logo"><img src="../media/logo.png" alt="Logo"></div>
+    <div id="menu">
+        <div id="odd"><a href="dierentuin.html">Over De Dierentuin</a></div>
+        <div id="shop"><a href="shop.html">Shop</a></div>
+        <div id="tickets"><a href="tickets.html">Tickets</a></div>
+        <div id="actueel"><a href="actueel.html">Actueel</a></div>
+        <div id="contact"><a href="contact.html">Contact</a></div>
+        <div id="soliciteren"><a href="solliciteren.html">Soliciteren</a></div>
+    </div>
+    <div id="locaties">
+        <div id="locatie1"></div>
+        <div id="locatie2"></div>
+        <div id="locatie3"></div>
+        <div id="locatie4"></div>
+    </div>
+    <div id="menukaart">
+        <div id="menukaart1"></div>
+        <div id="menukaart2"></div>
+        <div id="menukaart3"></div>
+        <div id="menukaart4"></div>
+    </div>
 </body>
 </html>
