--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Contact</h1>
+    <p>Klantenservice Tel: 68390274 Vrijwilliger: 68390599</p> </br>
+    <p>adress: 137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p>
+
 </body>
 </html>
