--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <h1>Contact</h1>
-    <p>Klantenservice Tel: 68390274 Vrijwilliger: 68390599</p> </br>
-    <p>adress: 137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p>
+    <h3>Telefoon</h3>
+    <p>Klantenservice Tel: 68390274</br> Vrijwilliger: 68390599</p> </br>
+    <h3>Adress</h3>
+    <p>137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p></br>
+    <h3>Email</h3>
+    <p>Informatie@BijingZoo.nl</p>
 
 </body>
 </html>
