--- a/HTML/tickets.html
+++ b/HTML/tickets.html
@@ -4,6 +4,36 @@
         <link rel="styleseet" href=../styles/tickets.css>
     </head>
     <body>
-        <
+        <div>
+            <div>
+                <img src=...>
+            </div>
+            <div>
+                <img src=...>
+            </div>
+            <div>
+                <h1>Tickets</h1>
+            </div>
+        </div>
+        <table>
+            <tr>
+                <td>Ticket</td>
+                <td>Beschrijving</td>
+                <td>Prijs</td>
+                <td>Link naar betaling</td>
+            </tr>
+            <tr>
+                <td>Ticket+</td>
+                <td>Beschrijving</td>
+                <td>Prijs</td>
+                <td>Link naar betaling</td>
+            </tr>
+            <tr>
+                <td>Ticket++</td>
+                <td>Beschrijving</td>
+                <td>Prijs</td>
+                <td>Link naar betaling</td>
+            </tr>
+        </table>
     </body>
 </html>
