--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/contact.css">
+    <script src=""></script>
 </head>
 <body>
     <h1>Contact</h1>
