--- a/HTML/cafeteria.html
+++ b/HTML/cafeteria.html
@@ -18,7 +18,10 @@
         <div id="soliciteren"><a href="solliciteren.html">Soliciteren</a></div>
     </div>
     <div id="locaties">
-        <div id="locatie1"></div>
+        <div id="vegewonder">
+            <img src="../media/vegewonder.png" alt="vegewonder"><br>
+            <p>Ze hebben hier veel verschillende vegatarische gerechten.</p>
+        </div>
         <div id="locatie2"></div>
         <div id="locatie3"></div>
         <div id="locatie4"></div>
