--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -14,7 +14,16 @@
     <h3>Adress</h3>
     <p>137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p></br>
     <h3>Email</h3>
-    <p>Informatie@BijingZoo.nl</p>
-
+    <p>Informatie@BijingZoo.nl</p></br>
+    <h3>Openingstijden</h3>
+    <ul>
+        <li>Maandag 9:00 - 21:00</li>
+        <li>Dinsdag 9:00 - 21:00</li>
+        <li>Woensdag 9:00 - 21:00</li>
+        <li>Donderdag 9:00 - 21:00</li>
+        <li>Vrijdag 9:00 - 21:00</li>
+        <li>Zaterdag 9:00 - 21:00</li>
+        <li>Zondag 9:00 - 21:00</li>
+      </ul>
 </body>
 </html>
