Menu balken toegevoegd

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,11 +3,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="../styles/contact.css">
-    <script src=""></script>
+    <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><img id="logo" src="../media/logo.png" alt="Logo"></li>
+            <li><a href="dierentuin.html">Dierentuin</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="actueel.html">Acuteel</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="solliciteren.html">Soliciteren</a></li>
+        </ul>
+    </nav>
     <h1>Contact</h1>
     <h3>Telefoon</h3>
     <p>Klantenservice Tel: 68390274</br> Vrijwilliger: 68390599</p> </br>
