--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -9,6 +9,17 @@
 
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><img id="logo" src="../media/logo.png" alt="Logo"></li>
+            <li><a href="dierentuin.html">Dierentuin</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="actueel.html">Acuteel</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="solliciteren.html">Soliciteren</a></li>
+        </ul>
+    </nav>
     <h1>Beoordelingen en reviews</h1>
 </body>
 </html>
