--- a/HTML/cafeteria.html
+++ b/HTML/cafeteria.html
@@ -3,20 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="../javascript/script.js"></script>
     <link rel="stylesheet" href="../styles/cafeteria.css">
+    <title>Cafeteria</title>
 </head>
 <body>
-    <div id="logo"><img src="../media/logo.png" alt="Logo"></div>
-    <div id="menu">
-        <div id="odd"><a href="dierentuin.html">Over De Dierentuin</a></div>
-        <div id="shop"><a href="shop.html">Shop</a></div>
-        <div id="tickets"><a href="tickets.html">Tickets</a></div>
-        <div id="actueel"><a href="actueel.html">Actueel</a></div>
-        <div id="contact"><a href="contact.html">Contact</a></div>
-        <div id="soliciteren"><a href="solliciteren.html">Soliciteren</a></div>
-    </div>
+   
     <div id="locaties">
         <div id="vegewonder">
             <img src="../media/vegewonder.png" alt="vegewonder"><br>
