--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -8,6 +8,17 @@
     <script src=""></script>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><img id="logo" src="../media/logo.png" alt="Logo"></li>
+            <li><a href="dierentuin.html">Dierentuin</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="actueel.html">Acuteel</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="solliciteren.html">Soliciteren</a></li>
+        </ul>
+    </nav>
     <h1>De plattengrond</h1>
     
 </body>
