--- a/HTML/aquarium.html
+++ b/HTML/aquarium.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="styleseet" href="../styles/aquarium.css">
+    <link rel="stylesheet" href="../styles/aquarium.css">
     <script src="../javascript/script.js"></script>
     <title>Aquarium</title>
 </head>
