--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -15,7 +15,7 @@
                 <li><a href="tickets.html">Tickets</a></li>
                 <li><a href="actueel.html">Actueel</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="solliciteren.html">Soliciteren</a></li>
+                <li><a href="solliciteren.html">Solliciteren</a></li>
             </ul>
         </nav>
         <div id=actueel_banner>
