--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,13 +10,13 @@
 <body>
     <nav>
         <ul>
-            <li><img id="logo" src="../media/logo.png" alt="Logo"></li>
+            <li><img id="logo" src="../media/logo.png"  alt="Logo"></li>
             <li><a href="dierentuin.html">Dierentuin</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="tickets.html">Tickets</a></li>
             <li><a href="actueel.html">Acuteel</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="solliciteren.html">Soliciteren</a></li>
+            <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
     <div id="banner"><img src="../media/Bejing-zoo-ingang.jpg" alt="Bejing-zoo-ingang"></div>
