--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -14,9 +14,9 @@
             <li><a href="dierentuin.html">Dierentuin</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="actueel.html">Acuteel</a></li>
+            <li><a href="actueel.html">Actueel</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="solliciteren.html">Soliciteren</a></li>
+            <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
     <h1>De plattengrond</h1>
