--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -19,6 +19,7 @@
             </ul>
         </nav>
         <div id=actueel_banner>
+            <img src=../media/actueel_banner.jpeg id=act_banner>
             <div id=actueel_titel>
                 <h1>
                     Actueel
