--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
+    <div id="banner"><img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang"></div>
     <nav>
         <ul>
             <li><img id="logo" src="../media/logo.png"  alt="Logo"></li>
@@ -19,14 +20,13 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
-    <div id="banner"><img src="../media/Bejing-zoo-ingang.jpg" alt="Bejing-zoo-ingang"></div>
     <div id="home1">
         <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci ut eros ornare volutpat nec vel magna. Donec mattis blandit aliquam. Mauris odio ipsum, eleifend non turpis vel, elementum blandit ligula. In ac finibus leo, quis sagittis diam. Nunc purus leo, sodales at risus at, pharetra pulvinar est. Cras eget sapien accumsan, efficitur massa eu, luctus justo. Vivamus pharetra vehicula vulputate. Praesent pellentesque, sem sed elementum dapibus, ex metus aliquam purus, quis volutpat diam quam eu erat. Nulla id ultrices turpis, eget suscipit orci.</p></div>
-        <div><img src="../media/yorikbalk.jpg" alt=""></div>
+        <div><img id="image1" src="../media/yorikbalk.jpg" alt=""></div>
     </div>
     <div id="home2">
         <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci ut eros ornare volutpat nec vel magna. Donec mattis blandit aliquam. Mauris odio ipsum, eleifend non turpis vel, elementum blandit ligula. In ac finibus leo, quis sagittis diam. Nunc purus leo, sodales at risus at, pharetra pulvinar est. Cras eget sapien accumsan, efficitur massa eu, luctus justo. Vivamus pharetra vehicula vulputate. Praesent pellentesque, sem sed elementum dapibus, ex metus aliquam purus, quis volutpat diam quam eu erat. Nulla id ultrices turpis, eget suscipit orci.</p></div>
-        <div><img src="../media/yorikbalk.jpg" alt=""></div>
+        <div><img id="image2" src="../media/yorikbalk.jpg" alt=""></div>
     </div>
 </body>
 </html>
