--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -20,6 +20,6 @@
         </ul>
     </nav>
     <h1>De plattengrond</h1>
-    
+    <img src="../media/plattengrond.png" id="plattengrond" alt="plattengrond">
 </body>
 </html>
