--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -23,15 +23,15 @@
     <h2>Bereid je optimaal voor op je bezoek aan Beijing Zoo en bekijk alvast de plattegrond.</h2>
     <img src="../media/plattengrond.png" id="plattengrond" alt="plattengrond"><br>
 <div class="dieren">
-    <h4>Reuzenpanda</h4>
-    <h4>Giraffe</h4>
-    <h4>Pinguïns</h4>
-    <h4>Neushoorns</h4>
-    <h4>Apen</h4>
-    <h4>Olifanten</h4>
-    <h4>Zebra's</h4>
-    <h4>Tijgers</h4>
+    <p>Legenda:</p>
+    <p>Reuzenpanda</p>
+    <p>Giraffe</p>
+    <p>Pinguïns</p>
+    <p>Neushoorns</p>
+    <p>Apen</p>
+    <p>Olifanten</p>
+    <p>Zebra's</p>
+    <p>Tijgers</p>
 </div>
-
 </body>
 </html>
