--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -18,22 +18,24 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
-    <h1>Contact</h1>
-    <h3>Telefoon</h3>
-    <p>Klantenservice Tel: 68390274</br> Vrijwilliger: 68390599</p> </br>
-    <h3>Adress</h3>
-    <p>137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p></br>
-    <h3>Email</h3>
-    <p>Informatie@BijingZoo.nl</p></br>
-    <h3>Openingstijden</h3>
-    <ul>
-        <li>Maandag 9:00 - 21:00</li>
-        <li>Dinsdag 9:00 - 21:00</li>
-        <li>Woensdag 9:00 - 21:00</li>
-        <li>Donderdag 9:00 - 21:00</li>
-        <li>Vrijdag 9:00 - 21:00</li>
-        <li>Zaterdag 9:00 - 21:00</li>
-        <li>Zondag 9:00 - 21:00</li>
-      </ul>
-</body>
+    <div class="alles">
+        <h1>Contact</h1>
+        <h3>Telefoon</h3>
+        <p>Klantenservice Tel: 68390274</br> Vrijwilliger: 68390599</p> </br>
+        <h3>Adress</h3>
+        <p>137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p></br>
+        <h3>Email</h3>
+        <p>Informatie@BijingZoo.nl</p></br>
+        <h3>Openingstijden</h3>
+        <ul>
+            <li>Maandag 9:00 - 21:00</li>
+            <li>Dinsdag 9:00 - 21:00</li>
+            <li>Woensdag 9:00 - 21:00</li>
+            <li>Donderdag 9:00 - 21:00</li>
+            <li>Vrijdag 9:00 - 21:00</li>
+            <li>Zaterdag 9:00 - 21:00</li>
+            <li>Zondag 9:00 - 21:00</li>
+          </ul>
+    </body>
+    </div>
 </html>
