--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <div id=actueel_banner>
-            <img src=../media/actueel_banner.jpeg id=act_banner>
+            <img src=../media/actueel_banner.jpg id=act_banner>
             <div id=actueel_titel>
                 <h1>
                     Actueel
@@ -27,17 +27,17 @@
             </div>
         </div>
         <div id=artikel1 class=artikel>
-            <div id=artikel_foto1></div>
-            <div id=artikel_titel1></div>
+            <div id=artikel_foto1> <img src=../media/yorikbalk.jpg id="img1"></div>
+            <div id=artikel_titel1><h2>Artikel 1</h2></div>
             <div id=artikel_text1>
                 <p>Dit is een div</p>
             </div>
         </div>
         <div id=artikel2 class=artikel>
-            <div id=artikel_foto2></div>
-            <div id=artikel_titel2></div>
+            <div id=artikel_foto2><img src=../media/yorikbalk.jpg id="img1"></div>
+            <div id=artikel_titel2><h2>Artikel 2</h2></div>
             <div id=artikel_text2></div>
-            <p>dit is een div</p>
+            <p>Dit is een div</p>
         </div>
     </body>
 </html>
