--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul>
-            <li><img id="logo" src="../media/logo.png" alt="Logo"></li>
+            <li><a href="index.html"><img id="logo" src="../media/logo.png"  alt="Logo"></a></li>
             <li><a href="dierentuin.html">Dierentuin</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="aquarium.html">Aquarium</a></li>
             <li><a href="tickets.html">Tickets</a></li>
             <li><a href="actueel.html">Actueel</a></li>
             <li><a href="contact.html">Contact</a></li>
