--- a/HTML/speeltuin.html
+++ b/HTML/speeltuin.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><img id="logo" src="../media/logo.png" alt="Logo"></li>
+            <li><a href="index.html"><img id="logo" src="../media/logo.png"  alt="Logo"></a></li>
             <li><a href="dierentuin.html">Dierentuin</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="tickets.html">Tickets</a></li>
