--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,13 +22,18 @@
     </nav>
         <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
         <h1>Bejing Zoo</h1>
-    <div id="home1">
-        <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci ut eros ornare volutpat nec vel magna. Donec mattis blandit aliquam. Mauris odio ipsum, eleifend non turpis vel, elementum blandit ligula. In ac finibus leo, quis sagittis diam. Nunc purus leo, sodales at risus at, pharetra pulvinar est. Cras eget sapien accumsan, efficitur massa eu, luctus justo. Vivamus pharetra vehicula vulputate. Praesent pellentesque, sem sed elementum dapibus, ex metus aliquam purus, quis volutpat diam quam eu erat. Nulla id ultrices turpis, eget suscipit orci.</p></div>
-        <div><img id="image1" src="../media/yorikbalk.jpg" alt=""></div>
-    </div>
-    <div id="home2">
-        <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci ut eros ornare volutpat nec vel magna. Donec mattis blandit aliquam. Mauris odio ipsum, eleifend non turpis vel, elementum blandit ligula. In ac finibus leo, quis sagittis diam. Nunc purus leo, sodales at risus at, pharetra pulvinar est. Cras eget sapien accumsan, efficitur massa eu, luctus justo. Vivamus pharetra vehicula vulputate. Praesent pellentesque, sem sed elementum dapibus, ex metus aliquam purus, quis volutpat diam quam eu erat. Nulla id ultrices turpis, eget suscipit orci.</p></div>
-        <div><img id="image2" src="../media/yorikbalk.jpg" alt=""></div>
-    </div>
+        <div id=artikel1 class=artikel>
+            <div id=artikel_foto1> <img src=../media/yorikbalk.jpg id="img1"></div>
+            <div id=artikel_titel1><h2>Artikel 1</h2></div>
+            <div id=artikel_text1>
+                <p>Dit is een div</p>
+            </div>
+        </div>
+        <div id=artikel2 class=artikel>
+            <div id=artikel_foto2><img src=../media/yorikbalk.jpg id="img1"></div>
+            <div id=artikel_titel2><h2>Artikel 2</h2></div>
+            <div id=artikel_text2></div>
+            <p>Dit is een div</p>
+        </div>
 </body>
 </html>
