--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -21,8 +21,10 @@
         </ul>
     </nav>
     <h1>Beoordelingen en reviews</h1>
+    <div
+    class="alles">
     <div id="persoon1">
-        <h3>Persoon1</h3>
+        <h3>Persoon1(naam)</h3>
         <h3>4 van de 5 sterren <br>
             Foto + naam <br>
             </h3>
@@ -30,7 +32,7 @@
             <p>Ontzettend mooie dierentuin. Prachtig aangelegd met veel oude bomen en speelse verblijven voor de dieren.</p>
     </div><br>
     <div id="persoon2">
-        <h3>Persoon2</h3>
+        <h3>Persoon2(naam)</h3>
         <h3>5 van de 5 sterren <br>
             Foto + naam <br>
             </h3>
@@ -40,7 +42,7 @@
                 </p>
     </div><br>
     <div id="persoon3">
-        <h3>Persoon3</h3>
+        <h3>Persoon3(naam)</h3>
         <h3>4 van de 5 sterren <br>
             Foto + naam <br>
             </h3>
@@ -49,7 +51,7 @@
                 </p>
     </div><br>
     <div id="persoon4">
-        <h3>Persoon4</h3>
+        <h3>Persoon4(naam)</h3>
         <h3>4 van de 5 sterren <br>
             Foto + naam <br>
             </h3>
@@ -58,14 +60,15 @@
                 </p>
     </div><br>
     <div id="persoon5">
-        <h3>Persoon5</h3>
+        <h3>Persoon5(naam)</h3>
         <h3>3 van de 5 sterren <br>
             Foto + naam <br>
             </h3>
             <h3>Heel leuk!</h3>
             <p>Super leuke dierentuin. Wij waren hier nog niet eerder geweest maar we hebben het erg naar ons zin gehad.
                 </p>
+                <button type="button">Schrijf een beoordeling</button>
     </div><br>
-    <button type="button">Schrijf een beoordeling</button>
+    </div>
 </body>
 </html>
