foto erin gedaan panda

--- a/HTML/pandas.html
+++ b/HTML/pandas.html
@@ -19,6 +19,6 @@
         </ul>
     </nav>
     <h1>Panda's</h1>
-    <img src="../media/carousel_packages_1024x768_180416panda.jpg">
+    <img src="../media/panda.jpg">
 </body>
 </html>
