--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -69,6 +69,14 @@
                 </p>
                 <button type="button">Schrijf een beoordeling</button>
     </div><br>
+    <div id="persoon6">
+        <h3>Persoon6(naam)</h3>
+        <h3>4 van de 5 sterren <br>
+            Foto + naam <br>
+            </h3>
+            <h3>Mooi!</h3>
+            <p>Ik zou zo weer opnieuw komen het was echt een belevenis!</p>
+    </div><br>
     </div>
 </body>
 </html>
