--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -24,14 +24,19 @@
     <img src="../media/plattengrond.png" id="plattengrond" alt="plattengrond"><br>
 <div class="dieren">
     <p>Legenda:</p>
-    <p>Reuzenpanda</p>
-    <p>Giraffe</p>
-    <p>Pinguïns</p>
-    <p>Neushoorns</p>
-    <p>Apen</p>
-    <p>Olifanten</p>
-    <p>Zebra's</p>
-    <p>Tijgers</p>
+    <p>Reuzenpanda  A</p>
+    <p>Giraffe  B</p>
+    <p>Pinguïns C</p>
+    <p>Neushoorns   D</p>
+    <p>Apen E</p>
+    <p>Olifanten    F</p>
+    <p>Zebra's  G</p>
+    <p>Tijgers  H</p>
+    <p>Receptie I</p>
+    <p>Ingang   J</p>
+    <p>Uitgang  K</p>
+    <p>Restaurant   L</p>
+    <p>Parkeerplaats    M</p>
 </div>
 </body>
 </html>
