--- a/HTML/pandas.html
+++ b/HTML/pandas.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <h1>Panda's</h1>
-    <img src="../media/panda.jpg">
+    <img src="../media/pandafoto.jpg">
     <p>De reuzepanda wordt ook wel pandabeer of bamboebeer genoemd.<br>
         De panda heeft een vacht met wit en zwarte kleur.<br>
         De panda kan een lichaamslengte bereiken tot ongeveer 150 tot 190 centimeter worden.<br>
