--- a/HTML/pandas.html
+++ b/HTML/pandas.html
@@ -18,18 +18,21 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
-    <h1>Panda's</h1>
-    <img src="../media/panda.jpg">
-    <p>De reuzepanda wordt ook wel pandabeer of bamboebeer genoemd.<br>
-        De panda heeft een vacht met wit en zwarte kleur.<br>
-        De panda kan een lichaamslengte bereiken tot ongeveer 150 tot 190 centimeter worden.<br>
-        Mannetjes hebben een gewicht van 85 tot 125 kilo en vrouwtjes hebben een gewicht van ongeveer 70 tot 100 kilo.<br>
-        De panda is een zoogdier en behoort tot de beren. De pandabeer is de meest ergste bedreigde diersoort op de wereld.<br>
-        Een panda gedraagt zich net als een mens. Een panda zou dus niet zomaar iemand kwaad doen, zoals slaan.<br>
-        De panda eet graag planten en dan met name bamboe. Ze wonen in delen van Azië.<br>
-        Doordat de panda een bedreigd diersoort is leven er nog maar 1864 panda’s in het wild en 600 in gevangenschap, dus in dierentuinen. <br>
-        Ze plaatsten panda’s vooral in dierentuinen, omdat ze nageslacht willen produceren. <br>
-        Dit betekent ook wel dat panda’s dan gaan voortplanten met elkaar om nieuwe pandabeertjes te krijgen. </p>  
+    <div id="tekst">
+        <h1>Panda's</h1>
+        <img src="../media/panda.jpg">
+        <p>De reuzepanda wordt ook wel pandabeer of bamboebeer genoemd.<br>
+            De panda heeft een vacht met wit en zwarte kleur.<br>
+            De panda kan een lichaamslengte bereiken tot ongeveer 150 tot 190 centimeter worden.<br>
+            Mannetjes hebben een gewicht van 85 tot 125 kilo en vrouwtjes hebben een gewicht van ongeveer 70 tot 100 kilo.<br>
+            De panda is een zoogdier en behoort tot de beren. De pandabeer is de meest ergste bedreigde diersoort op de wereld.<br>
+            Een panda gedraagt zich net als een mens. Een panda zou dus niet zomaar iemand kwaad doen, zoals slaan.<br>
+            De panda eet graag planten en dan met name bamboe. Ze wonen in delen van Azië.<br>
+            Doordat de panda een bedreigd diersoort is leven er nog maar 1864 panda’s in het wild en 600 in gevangenschap, dus in dierentuinen. <br>
+            Ze plaatsten panda’s vooral in dierentuinen, omdat ze nageslacht willen produceren. <br>
+            Dit betekent ook wel dat panda’s dan gaan voortplanten met elkaar om nieuwe pandabeertjes te krijgen. 
+        </p>  
+    </div>
 
 </body>
 </html>
