--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -19,5 +19,8 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <div id="giraffe">
+     <img src="../media/fotogiraffe.jpg">
+    </div>
 </body>
 </html>
