--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -23,20 +23,24 @@
     <h2>Bereid je optimaal voor op je bezoek aan Beijing Zoo en bekijk alvast de plattegrond.</h2>
     <img src="../media/plattengrond.png" id="plattengrond" alt="plattengrond"><br>
 <div class="dieren">
-    <p>Legenda:</p>
-    <p>Reuzenpanda  A</p>
-    <p>Giraffe  B</p>
-    <p>Pinguïns C</p>
-    <p>Neushoorns   D</p>
-    <p>Apen E</p>
-    <p>Olifanten    F</p>
-    <p>Zebra's  G</p>
-    <p>Tijgers  H</p>
-    <p>Receptie I</p>
-    <p>Ingang   J</p>
-    <p>Uitgang  K</p>
-    <p>Restaurant   L</p>
-    <p>Parkeerplaats    M</p>
+    <div id="deel1">
+        <p>Legenda:</p>
+        <p>Reuzenpanda  ( A )</p>
+        <p>Giraffe  ( B )</p>
+        <p>Pinguïns ( C )</p>
+        <p>Neushoorns   ( D )</p>
+        <p>Apen ( E )</p>
+        <p>Olifanten    ( F )</p>
+    </div>
+    <div id="deel2">
+        <p>Zebra's  ( G )</p>
+        <p>Tijgers  ( H )</p>
+        <p>Receptie ( I )</p>
+        <p>Ingang   ( J )</p>
+        <p>Uitgang  ( K )</p>
+        <p>Restaurant   ( L )</p>
+        <p>Parkeerplaats    ( M )</p>
+    </div>
 </div>
 </body>
 </html>
