--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -18,6 +18,7 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
     <div class="alles">
         <h1>Contact</h1>
         <h3>Telefoon</h3>
