--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -19,6 +19,7 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
     <h1>De plattengrond</h1>
     <h2>Bereid je optimaal voor op je bezoek aan Beijing Zoo en bekijk alvast de plattegrond.</h2>
     <img src="../media/plattengrond.png" id="plattengrond" alt="plattengrond"><br>
