--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -20,6 +20,7 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
     <h1>Beoordelingen en reviews</h1>
     <div
     class="alles">
