--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -19,5 +19,11 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <form>
+        <label for="fname">Voornaam:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Achternaam</label><br>
+        <input type="text" id="lname" name="lname">
+    </form>
 </body>
 </html>
