--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,14 +23,14 @@
         <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
         <h1>Bejing Zoo</h1>
         <div id=artikel1 class=artikel>
-            <div id=artikel_foto1> <img src=../media/yorikbalk.jpg id="img1"></div>
+            <div id=artikel_foto1> <img src=../media/Pandasitting.jpeg></div>
             <div id=artikel_titel1><h2>Artikel 1</h2></div>
             <div id=artikel_text1>
                 <p>Dit is een div</p>
             </div>
         </div>
         <div id=artikel2 class=artikel>
-            <div id=artikel_foto2><img src=../media/yorikbalk.jpg id="img1"></div>
+            <div id=artikel_foto2><img src=../media/yorikbalk.jpg></div>
             <div id=artikel_titel2><h2>Artikel 2</h2></div>
             <div id=artikel_text2></div>
             <p>Dit is een div</p>
