--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -19,11 +19,13 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
-    <form>
-        <label for="fname">Voornaam:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Achternaam</label><br>
-        <input type="text" id="lname" name="lname">
-    </form>
+    <div id="form">
+        <form >
+            <label for="fname">Voornaam:</label>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Achternaam</label>
+            <input type="text" id="lname" name="lname"><br>
+        </form>
+    </div>  
 </body>
 </html>
