--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -21,6 +21,11 @@
     </nav>
     <div id="giraffe">
      <img src="../media/fotogiraffe.jpg">
+     <p>De giraffe is een geslacht van de evenhoevige zoogdieren. Ze hebben een vlekkenpatroon op hun vacht met de kleuren bruin en geel.<br>
+        
+
+
+     </p>
     </div>
 </body>
 </html>
