--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -25,17 +25,17 @@
     <div
     class="alles">
     <div id="persoon1">
-        <h3>Persoon1(naam)</h3>
+        <h3>Sander</h3>
         <h3>4 van de 5 sterren <br>
-            Foto + naam <br>
+            <img src="../media/1.png" alt="foto1">
             </h3>
             <h3>Superfijne ervaring!</h3>
             <p>Ontzettend mooie dierentuin. Prachtig aangelegd met veel oude bomen en speelse verblijven voor de dieren.</p>
     </div><br>
     <div id="persoon2">
-        <h3>Persoon2(naam)</h3>
+        <h3>Kim</h3>
         <h3>5 van de 5 sterren <br>
-            Foto + naam <br>
+            <img src="../media/2.png" alt="foto2">
             </h3>
             <h3>Mooie park echt een aanrader!</h3>
             <p>Deze dierentuin vind ik zeer mooi.
@@ -43,27 +43,27 @@
                 </p>
     </div><br>
     <div id="persoon3">
-        <h3>Persoon3(naam)</h3>
+        <h3>Theo</h3>
         <h3>4 van de 5 sterren <br>
-            Foto + naam <br>
+            <img src="../media/3.png" alt="foto3">
             </h3>
             <h3>Ideaal voor kinderen!</h3>
             <p>Dit is echt een dierentuin die leuk is met kleine kinderen. Veel speeltoestellen en op diverse plekken de mogelijkheid om een versnapering te nuttigen.
                 </p>
     </div><br>
     <div id="persoon4">
-        <h3>Persoon4(naam)</h3>
+        <h3>Joost</h3>
         <h3>4 van de 5 sterren <br>
-            Foto + naam <br>
+        <img src="../media/4.png" alt="foto4">
             </h3>
             <h3>Leuk!</h3>
             <p>Erg leuke dag gehad in dierentuin Beijing Zoo! Duidelijke routes en veel te zien en beleven.
                 </p>
     </div><br>
     <div id="persoon5">
-        <h3>Persoon5(naam)</h3>
+        <h3>Charlotte</h3>
         <h3>3 van de 5 sterren <br>
-            Foto + naam <br>
+        <img src="../media/5.png" alt="foto5">
             </h3>
             <h3>Heel leuk!</h3>
             <p>Super leuke dierentuin. Wij waren hier nog niet eerder geweest maar we hebben het erg naar ons zin gehad.
@@ -71,9 +71,9 @@
                 <button type="button">Schrijf een beoordeling</button>
     </div><br>
     <div id="persoon6">
-        <h3>Persoon6(naam)</h3>
+        <h3>Victor</h3>
         <h3>4 van de 5 sterren <br>
-            Foto + naam <br>
+        <img src="../media/6.png" alt="foto6">
             </h3>
             <h3>Mooi!</h3>
             <p>Ik zou zo weer opnieuw komen het was echt een belevenis!</p>
