--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -16,6 +16,7 @@
                 <li><a href="actueel.html">Actueel</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="solliciteren.html">Solliciteren</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
         <div id=actueel_banner>
