--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -11,12 +11,8 @@
     <nav>
         <ul>
             <li><a href="index.html"><img id="logo" src="../media/logo.png"  alt="Logo"></a></li>
-            <li><a href="dierentuin.html">Dierentuin</a></li>
-            <li><a href="aquarium.html">Aquarium</a></li>
-            <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="actueel.html">Actueel</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="solliciteren.html">Solliciteren</a></li>
+            <li><a href="plattegrond.html">Plattegrond</a></li>
+            <li><a href="cafeteria.html">Cafeteria</a></li>
         </ul>
     </nav>
     <div id="giraffe">
