--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,19 +18,24 @@
             <li><a href="actueel.html">Acuteel</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="solliciteren.html">Solliciteren</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
         </ul>
     </nav>
         <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
         <h1>Bejing Zoo</h1>
         <div id=artikel1 class=artikel>
-            <div id=artikel_foto1> <img src=../media/Pandasitting.jpeg></div>
-            <div id=artikel_titel1><h2>Artikel 1</h2></div>
+            <div id=artikel_foto1> <img src=../media/Pandasitting.jpeg id="img1"></div>
+            <div id=artikel_titel1><h2>Over de Dierentuin</h2></div>
             <div id=artikel_text1>
-                <p>Dit is een div</p>
+                <p> <br>
+                    Beijing Zoo is een dierentuin gelegen midden in Beijing, de hoofdstad van China.<br>
+                    Oorspronkelijk was het een dierentuin van het koninklijk huis.<br>
+                    De dierentuin is woonplaats voor tal van dieren, waaronder de bekende Reuzenpanda.<br>
+                    Het huist ook een aquarium, wat het grootste landgelegen aquarium van de wereld is.</p>
             </div>
         </div>
         <div id=artikel2 class=artikel>
-            <div id=artikel_foto2><img src=../media/yorikbalk.jpg></div>
+            <div id=artikel_foto2><img src=../media/biglion.jpg id="img2"></div>
             <div id=artikel_titel2><h2>Artikel 2</h2></div>
             <div id=artikel_text2></div>
             <p>Dit is een div</p>
