--- a/HTML/plattegrond.html
+++ b/HTML/plattegrond.html
@@ -17,6 +17,7 @@
             <li><a href="actueel.html">Actueel</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="solliciteren.html">Solliciteren</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
         </ul>
     </nav>
     <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
