--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -22,10 +22,17 @@
     <div id="giraffe">
      <img src="../media/fotogiraffe.jpg">
      <p>De giraffe is een geslacht van de evenhoevige zoogdieren. Ze hebben een vlekkenpatroon op hun vacht met de kleuren bruin en geel.<br>
-        
+        De giraffe staat bekend om zijn lange nek. Het woord giraffe komt van de Italiaanse woord giraffa. <br>
+        De kop-romplengte van een volwassen giraffe heeft een lengte van 3,5 tot 4,8 meter lang en de staartlengte is van 76 tot 110 centimeter lang. <br>
+        Vrouwtjes worden 3,5 tot 4,7 meter hoog en ze wegen tussen de 400 en 500 kilogram. <br>
+        Mannetjes daarintegen worden 3,9 tot 5,2 meter hoog en ze wegen tussen de 500 en 800 kilogram. <br>
+        De giraffe komt vooral voor in Afrika. Ze zijn echte planteneters.<br>
+        Met hun lange nek kunnen ze makkelijk bij de hoogste bomen om daar de blaadjes van te pakken en op te eten.</p>
+    </div>
 
+    <div id="pinguin">
+    <img src="../media/Pinguin.jpg" width=700px height="300px">
 
-     </p>
     </div>
 </body>
 </html>
