--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -17,7 +17,7 @@
     </nav>
     <div id="giraffe">
      <img src="../media/fotogiraffe.jpg">
-     <p>De giraffe is een geslacht van de evenhoevige zoogdieren. Ze hebben een vlekkenpatroon op hun vacht met de kleuren bruin en geel.<br>
+     <p>De giraffe is een familie van de evenhoevige zoogdieren. Ze hebben een vlekkenpatroon op hun vacht met de kleuren bruin en geel.<br>
         De giraffe staat bekend om zijn lange nek. Het woord giraffe komt van de Italiaanse woord giraffa. <br>
         De kop-romplengte van een volwassen giraffe heeft een lengte van 3,5 tot 4,8 meter lang en de staartlengte is van 76 tot 110 centimeter lang. <br>
         Vrouwtjes worden 3,5 tot 4,7 meter hoog en ze wegen tussen de 400 en 500 kilogram. <br>
