--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -26,16 +26,16 @@
     class="alles">
     <div id="persoon1">
         <h3>Sander</h3>
-        <h3>4 van de 5 sterren <br>
-            <img src="../media/1.png" alt="foto1">
+        <img src="../media/1.png" id="foto1" alt="foto1"> <br>
+        <img src="../media/4 van de 5.png" id="ster1" alt="4/5">
             </h3>
             <h3>Superfijne ervaring!</h3>
             <p>Ontzettend mooie dierentuin. Prachtig aangelegd met veel oude bomen en speelse verblijven voor de dieren.</p>
     </div><br>
     <div id="persoon2">
         <h3>Kim</h3>
-        <h3>5 van de 5 sterren <br>
-            <img src="../media/2.png" alt="foto2">
+        <img src="../media/2.png" id="foto2" alt="foto2"> <br> <br>
+        <img src="../media/5 van de 5.png" id="ster2" alt="5/5">
             </h3>
             <h3>Mooie park echt een aanrader!</h3>
             <p>Deze dierentuin vind ik zeer mooi.
@@ -44,8 +44,8 @@
     </div><br>
     <div id="persoon3">
         <h3>Theo</h3>
-        <h3>4 van de 5 sterren <br>
-            <img src="../media/3.png" alt="foto3">
+        <img src="../media/3.png" id="foto3" alt="foto3"> <br>
+        <img src="../media/4 van de 5.png" id="ster3" alt="4/5">
             </h3>
             <h3>Ideaal voor kinderen!</h3>
             <p>Dit is echt een dierentuin die leuk is met kleine kinderen. Veel speeltoestellen en op diverse plekken de mogelijkheid om een versnapering te nuttigen.
@@ -53,8 +53,8 @@
     </div><br>
     <div id="persoon4">
         <h3>Joost</h3>
-        <h3>4 van de 5 sterren <br>
-        <img src="../media/4.png" alt="foto4">
+        <img src="../media/4.png" id="foto4" alt="foto4"> <br>
+        <img src="../media/4 van de 5.png" id="ster4" alt="4/5">
             </h3>
             <h3>Leuk!</h3>
             <p>Erg leuke dag gehad in dierentuin Beijing Zoo! Duidelijke routes en veel te zien en beleven.
@@ -62,8 +62,8 @@
     </div><br>
     <div id="persoon5">
         <h3>Charlotte</h3>
-        <h3>3 van de 5 sterren <br>
-        <img src="../media/5.png" alt="foto5">
+        <img src="../media/5.png" id="foto5" alt="foto5"> <br> <br>
+        <img src="../media/5 van de 5.png" id="ster5" alt="5/5">
             </h3>
             <h3>Heel leuk!</h3>
             <p>Super leuke dierentuin. Wij waren hier nog niet eerder geweest maar we hebben het erg naar ons zin gehad.
@@ -72,8 +72,8 @@
     </div><br>
     <div id="persoon6">
         <h3>Victor</h3>
-        <h3>4 van de 5 sterren <br>
-        <img src="../media/6.png" alt="foto6">
+        <img src="../media/6.png" id="foto6" alt="foto6"> <br>
+        <img src="../media/4 van de 5.png" id="ster6" alt="4/5">
             </h3>
             <h3>Mooi!</h3>
             <p>Ik zou zo weer opnieuw komen het was echt een belevenis!</p>
