--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,8 +32,9 @@
         <div id=artikel2 class=artikel>
             <div id=artikel_foto2><img src=../media/yorikbalk.jpg id="img1"></div>
             <div id=artikel_titel2><h2>Artikel 2</h2></div>
-            <div id=artikel_text2></div>
-            <p>Dit is een div</p>
+            <div id=artikel_text2>
+                <p>Dit is een div</p>
+            </div>
         </div>
 </body>
 </html>
