--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -19,5 +19,16 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <div>
+        <div>
+            <img src=...>
+        </div>
+        <div>
+            <img src=...>
+        </div>
+        <div>
+            <h1>Tickets</h1>
+        </div>
+    </div>
 </body>
 </html>
