--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="pinguin">
-    <img src="../media/Pinguin.jpg" width=700px height="300px">
+    <img src="../media/Pinguin.jpg">
 
     </div>
 </body>
