--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -27,7 +27,8 @@
     </div>
 
     <div id="pinguin">
-    <img src="../media/Pinguin.jpg">
+    <img src="../media/Pinguin.jpg"  
+  >
 
     </div>
 </body>
