--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -17,16 +17,16 @@
             <li><a href="actueel.html">Actueel</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="solliciteren.html">Solliciteren</a></li>
-            <li><a href="reviews.html">Reviews</a></li>
         </ul>
     </nav>
-    <div id="form">
-        <form >
-            <label for="fname">Voornaam:</label>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="lname">Achternaam</label>
-            <input type="text" id="lname" name="lname"><br>
-        </form>
-    </div>  
+    <form>
+        <label for="fname">Voornaam:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Achternaam</label><br>
+        <input type="text" id="lname" name="lname">
+        <label for="email">Emailadres</label>
+        <input type="email" id="email" name="email">
+        
+    </form>
 </body>
 </html>
