--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -20,12 +20,13 @@
         </ul>
     </nav>
     <form>
-        <label for="fname">Voornaam:</label><br>
+        <label for="fname">Voornaam:</label>
         <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Achternaam</label><br>
-        <input type="text" id="lname" name="lname">
+        <label for="lname">Achternaam</label>
+        <input type="text" id="lname" name="lname"><br>
         <label for="email">Emailadres</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email"><br>
+
         
     </form>
 </body>
