--- a/HTML/cafeteria.html
+++ b/HTML/cafeteria.html
@@ -7,10 +7,23 @@
     <title>Cafeteria</title>
 </head>
 <body>
-   
+    <nav>
+        <ul>
+            <li><a href="index.html"><img id="logo" src="../media/logo.png"  alt="Logo"></a></li>
+            <li><a href="dierentuin.html">Dierentuin</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="actueel.html">Acuteel</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="solliciteren.html">Solliciteren</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
+        </ul>
+    </nav>
+    <img id="bannerimage" src="../media/eten.jpeg" alt="Bejing-zoo-ingang">
+    <h1>Cafeteria</h1>
     <div id="locaties">
         <div id="vegewonder">
-            <img src="../media/vegewonder.png" alt="vegewonder"><br>
+            <img id="img1" src="../media/vegewonder.png" alt="vegewonder"><br>
             <p>Ze hebben hier veel verschillende vegatarische gerechten.</p>
         </div>
         <div id="locatie2"></div>
