--- a/HTML/tickets.html
+++ b/HTML/tickets.html
@@ -20,13 +20,10 @@
             </ul>
         </nav>
         <div>
-            <div>
-                <img src=...>
+            <div id="tickets_banner">
+                <img src="../media/tickets_banner.jpeg">
             </div>
-            <div>
-                <img src=...>
-            </div>
-            <div>
+            <div id="tickets_titel">
                 <h1>Tickets</h1>
             </div>
         </div>
@@ -35,19 +32,19 @@
                 <td>Ticket</td>
                 <td>Beschrijving</td>
                 <td>Prijs</td>
-                <td>Link naar betaling</td>
+                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2>Link naar betaling</a></td>
             </tr>
             <tr>
                 <td>Ticket+</td>
                 <td>Beschrijving</td>
                 <td>Prijs</td>
-                <td>Link naar betaling</td>
+                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2>Link naar betaling</a></td>
             </tr>
             <tr>
                 <td>Ticket++</td>
                 <td>Beschrijving</td>
                 <td>Prijs</td>
-                <td>Link naar betaling</td>
+                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2>Link naar betaling</a></td>
             </tr>
         </table>
     </body>
