--- a/HTML/dierentuin.html
+++ b/HTML/dierentuin.html
@@ -25,11 +25,8 @@
     </p>
     </div>
 
-    <div id="pinguin">
-        <img src="../media/Pinguin.jpg" alt="pinguin">
-
+    <div id="pinguins">
+        <img src="../media/pinguin.jpeg" id="pinguin" alt="pinguin">
     </div>
-    
-
 </body>
 </html>
