--- a/HTML/cafeteria.html
+++ b/HTML/cafeteria.html
@@ -21,20 +21,15 @@
     </nav>
     <img id="bannerimage" src="../media/eten.jpeg" alt="Bejing-zoo-ingang">
     <h1>Cafeteria</h1>
-    <div id="locaties">
-        <div id="vegewonder">
-            <img id="img1" src="../media/vegewonder.png" alt="vegewonder"><br>
-            <p>Ze hebben hier veel verschillende vegatarische gerechten.</p>
-        </div>
-        <div id="locatie2"></div>
-        <div id="locatie3"></div>
-        <div id="locatie4"></div>
+    <div class="vegewonder">
+        <div><img id="img1" src="../media/vegewonder.png"></div>
+        <div>Ze hebben hier veel verschillende vegatarische gerechten</div>
     </div>
-    <div id="menukaart">
-        <div id="menukaart1"></div>
-        <div id="menukaart2"></div>
-        <div id="menukaart3"></div>
-        <div id="menukaart4"></div>
+    <div class="yorik">
+        <div>Ze hebben hier veel verschillende vegatarische gerechten</div>
+        <div><img id="img1" src="../media/yorikbalk.jpg"></div>
     </div>
 </body>
 </html>
+
+
