--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -22,12 +22,20 @@
     <form>
         <label for="fname">Voornaam:</label>
         <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Achternaam</label>
+        <label for="lname">Achternaam:</label>
         <input type="text" id="lname" name="lname"><br>
-        <label for="email">Emailadres</label>
+        <label for="email">Emailadres:</label>
         <input type="email" id="email" name="email"><br>
-
-        
+        <label for="phone">Telefoonnummer:</label>
+        <input type="tel" id="phone" name="phone" placeholder="+31 6 12345678"><br>
+        <label for="adress">Adres:</label>
+        <input type="adres" id="adress" name="adress" placeholder="1234AB (woonplaats)"><br>
+        <label for="date">Geboortedatum</label>
+        <input type="date" id="date" name="geboortedatum"><br>
+        <label for="motivatie">Motivatie:</label>
+        <input type="text" id="motivatie" name="motivatie"><br>
+        <label for="werkervaring">Werkervaring:</label>
+        <input type="text" id="werkervaring" name="werkervaring"><br>
     </form>
 </body>
 </html>
