solliciteren html en css klaar

--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -21,7 +21,7 @@
     </nav>
     <form id="form">
         <label for="fname">Voornaam:</label>
-        <input type="text" id="fname" name="fname"><br>
+        <input  type="text" id="fname" name="fname"><br>
         <label for="lname">Achternaam:</label>
         <input type="text" id="lname" name="lname"><br>
         <label for="email">Emailadres:</label>
@@ -36,6 +36,12 @@
         <input type="text" id="motivatie" name="motivatie"><br>
         <label for="werkervaring">Werkervaring:</label>
         <input type="text" id="werkervaring" name="werkervaring"><br>
+        <button type="submit" form="form1" value="Submit">Verzenden</button>
     </form>
+     <div id="footer">
+        <p>Voor eventuele vragen over het solliciteren kunt u ons mailen op: Solliciteren@Beijngzoo.nl </p>
+     </div>
+     
+    
 </body>
 </html>
