--- a/HTML/index.html
+++ b/HTML/index.html
@@ -36,9 +36,15 @@
         </div>
         <div id=artikel2 class=artikel>
             <div id=artikel_foto2><img src=../media/biglion.jpg id="img2"></div>
-            <div id=artikel_titel2><h2>Artikel 2</h2></div>
+            <div id=artikel_titel2><h2>Beijng Aquarium</h2></div>
             <div id=artikel_text2></div>
-            <p>Dit is een div</p>
+            <p> <br>
+               Het aquarium is gelegen in het dierentuincomplex van Peking en heeft een oppervlakte van 12 hectare.<br>
+               Het zit vol met vreemde en prachtige vissen.<br>
+               Het aquarium heeft visshows, een haaienaquarium, Amazone-regenwoud en zeezoogdieren.<br>
+               In het Amazone-regenwoud zitten piranha's en koraalriffen.<br>
+               Er zijn ook optredens van dolfijnen en zeehonden de hele dag.
+            </p>
         </div>
 </body>
 </html>
