--- a/HTML/tickets.html
+++ b/HTML/tickets.html
@@ -19,10 +19,8 @@
                 <li><a href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
-        <div>
-            <div id="tickets_banner">
-                <img src="../media/tickets_banner.jpeg">
-            </div>
+        <div id="tickets_banner">
+            <img src="../media/tickets_banner.jpeg" id="tic_banner">
             <div id="tickets_titel">
                 <h1>Tickets</h1>
             </div>
@@ -32,19 +30,19 @@
                 <td>Ticket</td>
                 <td>Beschrijving</td>
                 <td>Prijs</td>
-                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2>Link naar betaling</a></td>
+                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2 class="tickets">Link naar betaling</a></td>
             </tr>
             <tr>
                 <td>Ticket+</td>
                 <td>Beschrijving</td>
                 <td>Prijs</td>
-                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2>Link naar betaling</a></td>
+                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2 class="tickets">Link naar betaling</a></td>
             </tr>
             <tr>
                 <td>Ticket++</td>
                 <td>Beschrijving</td>
                 <td>Prijs</td>
-                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2>Link naar betaling</a></td>
+                <td><a href=https://tikkie.me/pay/km2dlilshcnr8u42e7o2 class="tickets">Link naar betaling</a></td>
             </tr>
         </table>
     </body>
