--- a/HTML/solliciteren.html
+++ b/HTML/solliciteren.html
@@ -19,6 +19,8 @@
             <li><a href="solliciteren.html">Solliciteren</a></li>
         </ul>
     </nav>
+    <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
+    <h1>Solliciteren</h1>
     <form id="form">
         <label for="fname">Voornaam:</label>
         <input  type="text" id="fname" name="fname"><br>
