fl;io'hggwhio'gwraiohgrwaoh'

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,7 +37,7 @@
         <div id=artikel2 class=artikel>
             <div id=artikel_foto2><img src=../media/biglion.jpg id="img2"></div>
             <div id=artikel_titel2><h2>Beijng Aquarium</h2></div>
-            <div id=artikel_text2></div>
+            <div id=artikel_text2>
             <p> <br>
                Het aquarium is gelegen in het dierentuincomplex van Peking en heeft een oppervlakte van 12 hectare.<br>
                Het zit vol met vreemde en prachtige vissen.<br>
@@ -45,6 +45,7 @@
                In het Amazone-regenwoud zitten piranha's en koraalriffen.<br>
                Er zijn ook optredens van dolfijnen en zeehonden de hele dag.
             </p>
+            </div>
         </div>
 </body>
 </html>
