--- a/HTML/cafeteria.html
+++ b/HTML/cafeteria.html
@@ -20,14 +20,30 @@
         </ul>
     </nav>
     <img id="bannerimage" src="../media/eten.jpeg" alt="Bejing-zoo-ingang">
-    <h1>Cafeteria</h1>
+    <h1 id="titel">Cafeteria</h1>
     <div class="vegewonder">
         <div><img id="img1" src="../media/vegewonder.png"></div>
-        <div>Ze hebben hier veel verschillende vegatarische gerechten</div>
+        <div id="vegewondertekst">
+            <h1>Vegewonder</h1> 
+            <p>
+                Als je hunkert naar tarovis of kipnuggets gemaakt met soja, ben je op de verkeerde plek.<br>
+                Deze bestemming, die opkomt voor de idealen van natuurlijke, milieubewuste en artistieke culinaire creaties, streeft ernaar om authentieke smaken en texturen van verschillende ingrediënten te mixen en matchen, terwijl ze weigert elk vleesgerecht te imiteren. <br>
+                De producten komen uit heel China en de presentaties zijn voortreffelijk.<br>
+                Zorgvuldige service compleet met ervaring.
+            </p>
+        </div>
     </div>
-    <div class="yorik">
-        <div>Ze hebben hier veel verschillende vegatarische gerechten</div>
-        <div><img id="img1" src="../media/yorikbalk.jpg"></div>
+    <div class="lorem"> 
+        <div id="ipsum">  
+            <h1>Lorem ipsum</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl nibh, ultrices quis pulvinar id, interdum quis ligula.<br> 
+                Quisque lacinia auctor lacus, nec tempor metus interdum ut.<br>
+                Proin pulvinar, metus vitae vulputate venenatis, libero leo vulputate purus, tempus aliquet dui mi at lorem.<br>
+                Duis ut quam nulla. Etiam dictum consectetur magna eget tincidunt. Nunc ac tincidunt erat, eu rhoncus lacus.<br>
+            </p>
+        </div>
+        <div><img id="img1" src="../media/eendeten.png"></div>
     </div>
 </body>
 </html>
