--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
             <li><a href="dierentuin.html">Dierentuin</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="actueel.html">Acuteel</a></li>
+            <li><a href="actueel.html">Actueel</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="solliciteren.html">Solliciteren</a></li>
             <li><a href="reviews.html">Reviews</a></li>
@@ -35,10 +35,6 @@
             </div>
         </div>
         <div id=artikel2 class=artikel>
-            <div id=artikel_foto2><img src=../media/yorikbalk.jpg id="img1"></div>
-            <div id=artikel_titel2><h2>Artikel 2</h2></div>
-            <div id=artikel_text2>
-                <p>Dit is een div</p>
             <div id=artikel_foto2><img src=../media/biglion.jpg id="img2"></div>
             <div id=artikel_titel2><h2>Beijng Aquarium</h2></div>
             <div id=artikel_text2>
