--- a/HTML/actueel.html
+++ b/HTML/actueel.html
@@ -31,14 +31,15 @@
             <div id=artikel_foto1> <img src=../media/yorikbalk.jpg id="img1"></div>
             <div id=artikel_titel1><h2>Artikel 1</h2></div>
             <div id=artikel_text1>
-                <p>Dit is een div</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat, quam sed elementum malesuada, ex nisl lacinia ex, nec euismod nunc sapien commodo magna. Etiam rutrum est vitae venenatis porta. Pellentesque malesuada cursus sem ac tempus. Quisque facilisis fermentum vulputate. Sed feugiat maximus consectetur. Quisque porttitor rhoncus luctus. Praesent eu elementum nulla. Duis feugiat pellentesque ipsum, at molestie nibh bibendum id. Nunc vitae luctus libero. Maecenas egestas nisl et risus tincidunt congue.</p>
             </div>
         </div>
         <div id=artikel2 class=artikel>
             <div id=artikel_foto2><img src=../media/yorikbalk.jpg id="img1"></div>
             <div id=artikel_titel2><h2>Artikel 2</h2></div>
-            <div id=artikel_text2></div>
-            <p>Dit is een div</p>
+            <div id=artikel_text2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat, quam sed elementum malesuada, ex nisl lacinia ex, nec euismod nunc sapien commodo magna. Etiam rutrum est vitae venenatis porta. Pellentesque malesuada cursus sem ac tempus. Quisque facilisis fermentum vulputate. Sed feugiat maximus consectetur. Quisque porttitor rhoncus luctus. Praesent eu elementum nulla. Duis feugiat pellentesque ipsum, at molestie nibh bibendum id. Nunc vitae luctus libero. Maecenas egestas nisl et risus tincidunt congue.</p>
+            </div>
         </div>
     </body>
 </html>
