--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -27,6 +27,8 @@
             <p>Klantenservice Tel: 68390274</br> Vrijwilliger: 68390599</p> </br>
             <h3>Adress</h3>
             <p>137 Xizhimen Outer St, Dong Wu Yuan, Xicheng Qu, Beijing Shi, China</p></br>
+            <h3>Sociaal Media</h3>
+            <a href="http://www.bjzoo.com/default.html">Bejing Zoo website</a>
         </div>
         <div id="open">
             <h3>Email</h3>
