--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
         <img id="bannerimage" src="../media/Reuzenpanda.jpeg" alt="Bejing-zoo-ingang">
-        <h1>Bejing Zoo</h1>
+        <h1>Beijing Zoo</h1>
         <div id=artikel1 class=artikel>
             <div id=artikel_foto1> <img src=../media/Pandasitting.jpeg id="img1"></div>
             <div id=artikel_titel1><h2>Over de Dierentuin</h2></div>
